[package]
name = "apalis-amqp"
version = "0.2.2"
edition = "2021"
description = "Message queuing utilities for Rust using apalis and Amqp"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/geofmureithi/apalis-amqp"
documentation = "https://docs.rs/apalis-amqp"
readme = "README.md"
keywords = ["message", "worker", "amqp"]
categories = ["database"]

[dependencies]
async-trait = "0.1"
apalis-core = { version = "0.4.0", features = ["mq"] }
serde = "1"
serde_json = "1"
deadpool = "0.9.0"
deadpool-lapin = "0.10.0"
lapin = "2.1"
futures = { version = "0.3.28", default-features = true }
tower = "0.4"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }


[lib]
doc-scrape-examples = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
