[package]
name = "apalis-amqp"
version = "0.4.0-rc.1"
edition = "2021"
description = "Message queuing utilities for Rust using apalis and Amqp"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/geofmureithi/apalis-amqp"
documentation = "https://docs.rs/apalis-amqp"
readme = "README.md"
keywords = ["message", "worker", "amqp"]
categories = ["database"]

[dependencies]
apalis-core = { version = "0.6.0-rc.5" }
serde = "1"
serde_json = "1"
deadpool = "0.10.0"
deadpool-lapin = "0.11.0"
lapin = "2.3"
futures = { version = "0.3.30", default-features = true }
tower = "0.5"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
apalis-core = { version = "0.6.0-rc.5" }
apalis = { version = "0.6.0-rc.5", default-features = false, features = [
    "retry",
    "tokio-comp",
] }
futures-util = "0.3"


[lib]
doc-scrape-examples = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]

[workspace]
members = ["examples/basic"]
