[package]
name = "basic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
apalis-core = { version = "0.5" }
futures = "0.3"
apalis-amqp = { path = "../../" }
tower = { version = "0.4", features = ["retry"] }
